# Text-to-SQL-Finetune

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REPORT.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: .gitkeep
docs/: blog-text-to-sql.md  stack_derisk.md
results/: finetune_compare.json  frontier.json  ladder.json  schema_ablation_Qwen2.5-Coder-1.5B-Instruct.json  schema_ablation_Qwen2.5-Coder-7B-Instruct.json
scripts/: derisk.sh  plot_ablation.py  plot_finetune.py  plot_ladder.py  prepare_data.sh  run_ablation.py  run_baseline.py  run_finetune.py  run_frontier.py  run_ladder.py
src/text2sql/: __init__.py  data.py  evaluate.py  gateway.py  infer.py  train.py
